# erfan-agent-backend

./: .replit  Dockerfile  package-lock.json  package.json  pyproject.toml  start.sh
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: chat-message.tsx
client/src/hooks/: use-chat.ts
client/src/pages/: chat.tsx
server/: agent.py  main.py  routes.ts
shared/: routes.ts  schema.ts
