[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "e2b-code-interpreter>=2.4.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.21",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
